[tool.poetry]
name = "neural"
version = "1.0.0"
description = ""
authors = []
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.19"
neat-python = "0.92"
graphviz = "0.18.2"
cycler = "0.11.0"
kiwisolver = "1.3.2"
matplotlib = "3.4.3"
numpy = "1.21.4"
pillow = "8.4.0"
pyparsing = "3.0.6"
python-dateutil = "2.8.2"
six = "1.16.0"
pydot = "1.4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.9.16"
flake8-pyproject = "^1.2.3"
pep8-naming = "^0.13.3"
ruff = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.blue]
line-length = 88
preview = true


[tool.isort]
profile = "black"


[tool.flake8]
max-line-length = 88
max-complexity = 10
extend-immutable-calls = ["Depends"]

[tool.ruff]
line-length = 88


[tool.ruff.format]
quote-style = "single"
